Links de Redes Sociais

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <div class="contatos">
         <h2>Kauê Sabino</h2>
         <ul class="d-flex lista">
-            <li><a href=""><img src="linkedin.svg" alt=""> Linkedin</a></li>
-            <li><a href=""><img src="github.svg" alt=""> Github</a></li>
+            <li><a href="https://www.linkedin.com/in/kaue-villa%C3%A7a-de-almeida/"><img src="linkedin.svg" alt=""> Linkedin</a></li>
+            <li><a href="https://github.com/KaueSabinoSRV17"><img src="github.svg" alt=""> Github</a></li>
         </ul>
     </div>
     <div class="centered-div">
